<resources>
    <string name="app_name">My Application</string>
    <string name="앱이름">보람상조</string>
    <string name="login_button_str">로그인</string>
    <string name="id_edit_text_str">아이디를 입력해주세요</string>
    <string name="id_validate_check">아이디 중복 검사</string>
    <string name="pw_edit_text_str">비밀번호를 입력해주세요</string>
    <string name="pw_check_edit_text_str">비밀번호를 확인해주세요</string>
    <string name="login_logo_text_view_str">로그인 하기</string>
    <string name="register_logo_text_view_str">회원가입 하기</string>
    <string name="modify_user_info_text_view_str">정보변경 하기</string>
    <string name="drive_info_text_view_str">운전 정보보기</string>
    <string name="captcha_logo_text_view_str">음주 운전 테스트</string>
    <string name="register_button_str">회원가입</string>
    <string name="find_user_info_button_str">아이디/비밀번호 찾기</string>
    <string name="bottom_logo_str">Copyright 2019. 보람상조 All Rights Reserved.</string>
    <string name="cancel_button_str">뒤로가기</string>
    <string name="modify_button_str">수정하기</string>
    <string name="name_edit_text_str">이름을 입력해주세요</string>
    <string name="tel_edit_text_str">전화번호를 입력해주세요</string>
    <string name="captcha_answer_str">올바른 정답을 입력해주세요</string>
    <string name="captcha_answer_warning_str" align="right">대문자, 소문자 상관 없이 입력해주세요</string>
    <string name="captcha_start_warning_str" align="right">테스트 시작 버튼은 누른후 시작해주세요</string>
    <string name="my_location_str">내 위치 표시하기</string>
    <string name="test1_button_str">테스트1 시작하기</string>
    <string name="test2_button_str">테스트2 시작하기</string>
    <string name="captcha_answer_submit">제출 하기</string>
    <string name="captcha_answer_start">테스트 시작하기</string>
    <string name="recaptcha_clear">초기화</string>
    <string name="drive_info_button_str">나의 운전 정보보기</string>
    <string name="modify_user_info_button_str">회원 정보 변경하기</string>
    <string name="menu_text_view_str">사용가능 메뉴</string>
    <string name="id_warnings">아이디는 변경이 불가능 합니다</string>
    <string name="id_str">아이디</string>
    <string name="pw_str">비밀번호</string>
    <string name="name_str">이름</string>
    <string name="tel_str">전화번호</string>
    <string name="find_user_info_id">아이디 찾기</string>
    <string name="find_id_for_name">이름을 입력해주세요</string>
    <string name="find_id_for_tel">전화번호를 입력해주세요</string>
    <string name="find_id_button">아이디 찾기</string>
    <string name="find_user_info_pw">비밀번호 찾기</string>
    <string name="find_pw_for_id">아이디를 입력해주세요</string>
    <string name="find_pw_for_name">이름을 입력해주세요</string>
    <string name="find_pw_button">비밀번호 찾기</string>
    <string name="drive_start_text_view">운전 시작 시간</string>
    <string name="current_time_text_view">현재 시간</string>
    <string name="before_time">00:00:00</string>
</resources>
