<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- inform text view -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/modify_user_info_text_view_str"
        android:textColor="#42B1F0"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- id warning str -->
    <TextView
        android:id="@+id/id_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/id_warnings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <!-- modify_id edit text -->
    <EditText
        android:id="@+id/UserId_editText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/id_str"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_warning" />

    <!-- modify_pw edit text -->
    <EditText
        android:id="@+id/UserPasswd_editText"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/pw_str"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserId_editText" />

    <!-- modify_name edit text -->
    <EditText
        android:id="@+id/UserName_editText"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/name_str"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserPasswd_editText" />

    <!-- modify_tel edit text -->
    <EditText
        android:id="@+id/UserTel_editText"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/tel_str"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName_editText" />

    <!-- cancel button -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#5FC2FA"
        android:text="@string/cancel_button_str"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_button" />

    <!-- modify button -->
    <Button
        android:id="@+id/modify_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#5FC2FA"
        android:text="@string/modify_button_str"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserTel_editText" />

    <!-- bottom logo -->
    <TextView
        android:id="@+id/bottom_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/bottom_logo_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>