<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 아이디 찾기 -->
    <!-- inform text view -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/find_user_info_id"
        android:textColor="#42B1F0"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- find id for name edit text -->
    <EditText
        android:id="@+id/find_id_for_name"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/find_id_for_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <!-- find id for tel edit text -->
    <EditText
        android:id="@+id/find_id_for_tel"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/find_id_for_tel"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_id_for_name" />

    <!-- find id button -->
    <Button
        android:id="@+id/find_id_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#5FC2FA"
        android:text="@string/find_id_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_id_for_tel" />


    <!-- 비밀번호 찾기 -->
    <!-- inform text view -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/find_user_info_pw"
        android:textColor="#42B1F0"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_id_button" />

    <!-- find pw for name edit text -->
    <EditText
        android:id="@+id/find_pw_for_id"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/find_pw_for_id"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- find pw for tel edit text -->
    <EditText
        android:id="@+id/find_pw_for_name"
        android:layout_width="300dp"

        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/id_edit_text"
        android:ems="10"
        android:hint="@string/find_pw_for_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dip"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_for_id" />

    <!-- find pw button -->
    <Button
        android:id="@+id/find_pw_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#5FC2FA"
        android:text="@string/find_pw_button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pw_for_name" />











    <!-- bottom logo -->
    <TextView
        android:id="@+id/bottom_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/bottom_logo_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>